Bug 356249 - [Krita animation beta] File not storing animation end frame number.
Summary: [Krita animation beta] File not storing animation end frame number.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: unspecified
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-12-03 14:47 UTC by Bhupen
Modified: 2015-12-14 15:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bhupen 2015-12-03 14:47:40 UTC
File not storing animation end frame number.
When you reopen a frame this defaults back to frame 100.


Reproducible: Always

Steps to Reproduce:
1. Create some animation and set end frame to 50 (anything other than 100)
2. save the file
3. Reopen krita and the file.


Actual Results:  
The animation end frame defaults back to 100.

Expected Results:  
The animation end frame should be retained.
Comment 1 Bhupen 2015-12-12 16:20:05 UTC
This is fixed in krita_2.9.10.1ae_beta_x64.
Comment 2 Bhupen 2015-12-12 16:23:10 UTC
Sorry, I did not check this completely earlier. The issue still persists.
Comment 3 Dmitry Kazakov 2015-12-14 15:48:03 UTC
Git commit 1a18426e977a66650846c89d464e852f68de661c by Dmitry Kazakov.
Committed on 14/12/2015 at 15:47.
Pushed by dkazakov into branch 'krita-animation-pentikainen'.

Fix loading of the animation playback properties

M  +10   -3    krita/plugins/extensions/dockers/animation/animation_docker.cpp

http://commits.kde.org/calligra/1a18426e977a66650846c89d464e852f68de661c
Comment 4 Dmitry Kazakov 2015-12-14 15:49:56 UTC
Git commit 65766c2c886d6ec45e287791638247baae4195bb by Dmitry Kazakov.
Committed on 14/12/2015 at 15:48.
Pushed by dkazakov into branch 'master'.

Fix loading of the animation playback properties

M  +10   -3    krita/plugins/extensions/dockers/animation/animation_docker.cpp

http://commits.kde.org/krita/65766c2c886d6ec45e287791638247baae4195bb