Fix loading of the animation playback properties

BUG:356249